# systemnahes-programmieren

./: .gitignore
arm-cortex-m0-cmake-start/: .clang-format  CMakeLists.txt  docker-compose.yml  flake.nix  send  toolchain.cmake
arm-cortex-m0-cmake-start/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
arm-cortex-m0-cmake-start/.direnv/flake-inputs/: x139nxvkwvvn44lwyh2vf4m88yhvmhcq-source
arm-cortex-m0-cmake-start/.run/: Attach GDB.run.xml  Build and Run Qemu.run.xml  testApp.run.xml
arm-cortex-m0-cmake-start/include/devices/: nvic.h  timer.h  uart.h
arm-cortex-m0-cmake-start/output/: testApp.elf
arm-cortex-m0-cmake-start/src/: main.c
arm-cortex-m0-cmake-start/src/devices/: random.c  register_access.c  timer.c  uart.c
arm-cortex-m0-cmake-start/src/misc/: faculty.c  fibonacci.c  var_test_1.c  var_test_2.c
